# zmq_ops

./: .gitignore  CMakeLists.txt  README.md  setup.py  zmq_reader_test.py  zmq_server_test.py
proto/: CMakeLists.txt  tensor_array.proto
src/: CMakeLists.txt  tensor_array.pb.cc  tensor_array.pb.h  zmq_ops.cc  zmq_reader_op.cc  zmq_server_op.cc
zmq_ops/: __init__.py  tensor_array_pb2.py  zmq_ops.py
